--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,156 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
-    <script type="text/javascript" src="./main.js"></script>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
+      <fieldset class="mainelement">
+        <legend>Personal information</legend>
+        <label name="surname" class="one">
+          Surname:
+          <input
+            type="text"
+            name="surname"
+            required
+            autocomplete="off"
+          >
+        </label>
+        <label name="name" class="one">
+          Name:
+          <input
+            type="text"
+            name="name"
+            required
+            autocomplete="off"
+          >
+        </label>
+        <label name="age" class="one">
+          How old are You?
+          <input
+            type="number"
+            name="age"
+            min="1"
+            max="100"
+            value="12"
+            required
+          >
+        </label>
+        <label name="date" class="one">
+          Full date of birth:
+          <input
+            type="date"
+            name="date"
+            required
+          >
+        </label>
+        <label name="acception" class="one">
+          I accept the term of the agreement
+          <input
+              type="checkbox"
+              name="acception"
+              required
+          >
+        </label>
+      </fieldset>
+      <fieldset class="mainelement">
+        <legend>Registration</legend>
+        <label name="email" class="one">
+          E-mail:
+          <input 
+            type="email"
+            name="login"
+            placeholder="email@example.com"
+            required
+          >
+        </label>
+        <label name="password" class="one">
+          Password:
+          <input 
+            type="password"
+            name="password"
+            minlength="5"
+            maxlength="30"
+            required
+          >
+        </label>
+      </fieldset>
+      <fieldset class="mainelement">
+        <legend>An interesting fact about you!</legend>
+        <label name="cats" class="one">
+          Do you love cats?
+          <input 
+            type="radio"
+            name="fact"
+            value="Yes"
+            required
+          ><label > Yes</label>
+          <input 
+            type="radio"
+            name="fact"
+            value="No"
+            required
+          ><label > No</label>
+        </label>
+        <label name="color" class="one">
+          What is your favorite color?
+          <input 
+            type="color"
+            name="color"
+            required
+          >
+        </label>
+        <label name="color" class="one">
+          What time do you go to bed?
+          <input 
+            type="time"
+            name="time"
+            required
+          >
+        </label>
+        <label name="cars" class="one">
+          What are your favorite brand of cars?
+          <select
+            name="cars"
+            multiple
+            required
+          >
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+          </select>
+        </label>
+        <label name="work" class="one">
+          How do you rate our work?
+          <input
+            type="range"
+            min="0"
+            max="100"
+            value="0"
+            required
+          >
+        </label>
+      </fieldset>
+      <fieldset class="mainelement">
+        <legend>Additional info</legend>
+        <label name="comments" class="one">
+          Comments:
+          <textarea
+            name="comments"
+            required
+         ></textarea>
+        </label>
+        <label name="recomendation" class="one">
+          Would you recommend us?
+          <select>
+            <option>Yes</option>
+            <option>No</option>
+          </select>
+        </label>
+      </fieldset>
+      <input
+        type="submit"
+        class="button"
+        value="Submit"
+      >
+      <script type="text/javascript" src="./main.js"></script>
+    </form>
   </body>
 </html>
