--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
             autocomplete="off"
           >
         </label>
+
         <label name="name" class="one">
           Name:
           <input
@@ -32,6 +33,7 @@
             autocomplete="off"
           >
         </label>
+
         <label name="age" class="one">
           How old are You?
           <input
@@ -43,6 +45,7 @@
             required
           >
         </label>
+
         <label name="date" class="one">
           Full date of birth:
           <input
@@ -51,6 +54,7 @@
             required
           >
         </label>
+
         <label name="acception" class="one">
           I accept the term of the agreement
           <input
@@ -60,6 +64,7 @@
           >
         </label>
       </fieldset>
+
       <fieldset class="mainelement">
         <legend>Registration</legend>
         <label name="email" class="one">
@@ -70,7 +75,8 @@
             placeholder="email@example.com"
             required
           >
-        </label>
+        </label>\
+
         <label name="password" class="one">
           Password:
           <input 
@@ -82,23 +88,32 @@
           >
         </label>
       </fieldset>
+
       <fieldset class="mainelement">
         <legend>An interesting fact about you!</legend>
         <label name="cats" class="one">
           Do you love cats?
-          <input 
-            type="radio"
-            name="fact"
-            value="Yes"
-            required
-          ><label > Yes</label>
-          <input 
-            type="radio"
-            name="fact"
-            value="No"
-            required
-          ><label > No</label>
+          <label for="catsYes">
+            <input 
+              type="radio"
+              name="fact"
+              value="Yes"
+              required
+            >
+            Yes
+          </label>
+          
+          <label for="catsNo">
+            <input 
+              type="radio"
+              name="fact"
+              value="Yes"
+              required
+            >
+            No
+          </label>
         </label>
+
         <label name="color" class="one">
           What is your favorite color?
           <input 
@@ -107,6 +122,7 @@
             required
           >
         </label>
+
         <label name="color" class="one">
           What time do you go to bed?
           <input 
@@ -115,6 +131,7 @@
             required
           >
         </label>
+
         <label name="cars" class="one">
           What are your favorite brand of cars?
           <select
@@ -127,6 +144,7 @@
             <option value="Lada">Lada</option>
           </select>
         </label>
+
         <label name="work" class="one">
           How do you rate our work?
           <input
@@ -138,6 +156,7 @@
           >
         </label>
       </fieldset>
+
       <fieldset class="mainelement">
         <legend>Additional info</legend>
         <label name="comments" class="one">
@@ -147,6 +166,7 @@
             required
          ></textarea>
         </label>
+
         <label name="recomendation" class="one">
           Would you recommend us?
           <select>
@@ -155,6 +175,7 @@
           </select>
         </label>
       </fieldset>
+
       <input
         type="submit"
         class="button"
