--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
 
       <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
-        <div class="one">
+        <label class="one">
           Do you love cats?
           <label for="catsYes">
             <input 
@@ -112,7 +112,7 @@
             >
               No
           </label>
-        </div>
+        </label>
 
         <label name="color" class="one">
           What is your favorite color?
